# NeuralNetwork

./: .gitignore  README.md  test  test.cpp
cpu/: CMakeLists.txt  test.cpp  xor.cpp
cpu/include/: NeuralNetwork.back.h  NeuralNetwork.h  globals.h
cpu/src/: NeuralNetwork.back.cpp  NeuralNetwork.cpp  globals.cpp
gpu/: CMakeLists.txt  README.md  diab.cpp  emomap.cpp  main.cpp  mnist.cpp  xor.cpp
gpu/data/: data.txt  run  training.cpp
gpu/include/: .ninja_deps  .ninja_log  Layer.h  activation.h  base_layer.h  basic_matrix.h  build.ninja  cuNeuralNetwork.h  dev_vector.h  dimension.h  helper_functions.h  kernel.h  layer.h  loss.h  optimizer.h  softmax.h
gpu/src/: Layer.cu  activation.cu  cuNeuralNetwork.cu  kernel.cu  kernel.cuh  layer.cu  loss.cu  optimizer.cu  softmax.cu
gpu/utils/: a.out  basic_matrix.h  data_reader.cpp  data_reader.h  debug.cu  debug.h  test.csv
