cmake_minimum_required(VERSION 3.22)
project(test LANGUAGES CXX)
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-O3")
set(CMAKE_CXX_FLAGS "-march=native")
set(CMAKE_CXX_FLAGS "-mavx2")
add_compile_options(-g)
add_compile_options(-pg)
add_link_options(-pg)
include_directories(include/)
add_library(NeuralNetwork ./src/NeuralNetwork.cpp)
add_library(globals ./src/globals.cpp)
add_executable(xor xor.cpp)
target_link_libraries(NeuralNetwork globals)
target_link_libraries(xor NeuralNetwork) 
target_link_libraries(xor globals) 
